# microservice_a/docs/swagger.yaml
@@ -77,7 +77,16 @@ paths:
       - sensors
   /sensors:
     get:
-      description: Returns all sensor readings from the database
+      description: Returns sensor readings with pagination support
+      parameters:
+      - description: Page number (default is 1)
+        in: query
+        name: page
+        type: integer
+      - description: Number of records per page (default is 10)
+        in: query
+        name: limit
+        type: integer
       produces:
       - application/json
       responses:
@@ -93,7 +102,7 @@ paths:
             additionalProperties:
               type: string
             type: object
-      summary: Retrieve all sensor data
+      summary: Retrieve paginated sensor data
       tags:
       - sensors
   /sensors/filter-bytime:
