# microservice_a/handler/getdata.go
@@ -4,6 +4,7 @@ import (
 	"net/http"
 	db "sensors/DB"
 	"sensors/helpers"
+	"strconv"
 
 	"github.com/labstack/echo/v4"
 )
@@ -16,12 +17,14 @@ type ReadingData struct {
 	Time_stamp   string
 }
 
-// @Summary      Retrieve all sensor data
-// @Description  Returns all sensor readings from the database
+// @Summary      Retrieve paginated sensor data
+// @Description  Returns sensor readings with pagination support
 // @Tags         sensors
 // @Produce      json
-// @Success      200  {array}   ReadingData
-// @Failure      500  {object}  map[string]string
+// @Param        page   query     int  false  "Page number (default is 1)"
+// @Param        limit  query     int  false  "Number of records per page (default is 10)"
+// @Success      200    {array}   ReadingData
+// @Failure      500    {object}  map[string]string
 // @Router       /sensors [get]
 func GetData(c echo.Context) error {
 	debug := new(helpers.HelperStruct)
@@ -29,8 +32,29 @@ func GetData(c echo.Context) error {
 	debug.SetUid(c.Request())
 	debug.Log(helpers.Statement, "GetData (+)")
 	lRecords := []ReadingData{}
+	pageStr := c.QueryParam("page")
+	limitStr := c.QueryParam("limit")
 
-	lRow, lerr := db.Gdb.Query("SELECT nvl(sensor_type,''), nvl(sensor_value,''), nvl(id1,''), nvl(id2,''), nvl(time_stamp,'') FROM readings_table;")
+	// Default values if not provided
+	page := 1
+	limit := 10
+
+	if pageStr != "" {
+		if p, err := strconv.Atoi(pageStr); err == nil && p > 0 {
+			page = p
+		}
+	}
+	if limitStr != "" {
+		if l, err := strconv.Atoi(limitStr); err == nil && l > 0 {
+			limit = l
+		}
+	}
+
+	offset := (page - 1) * limit
+
+	lSqlString := `SELECT IFNULL(sensor_type,''), IFNULL(sensor_value,''), IFNULL(id1,''), IFNULL(id2,''), IFNULL(time_stamp,'') FROM readings_table  LIMIT ? OFFSET ? ;`
+
+	lRow, lerr := db.Gdb.Query(lSqlString, limit, offset)
 	if lerr != nil {
 		debug.Log(helpers.Elog, "GD01", lerr)
 		return lerr
